I'm attaching diffs to add a new FGInput module to FlightGear (src/Input).  So far, FGInput replaces most of src/Main/keyboard.cxx (I've left a tiny stub); in the very near future, it will also take over control of the joystick, mouse (Norm permitting), and panel instrument interactions, so that there is a single mechanism for configuring all input devices.
The new format should be (close to) self-explanatory by looking at the
new base-package file keyboard.xml, which is now included by
preferences.xml (I'll do the same thing for the joystick when I have a
chance).  I have not managed to move all keybindings into this file
yet, but I've made a good start.  I'm including Tony in the recipient
list so that he can see how bindings can use an external XML file.

This patch also adds support for multiple bindings for a single key,
special keys (i.e. keypad and function keys), and key modifiers
(shift/alt/ctrl); special keys use the PUI convention of adding 256 to
the Glut key code.

Unfortunately, everything comes with a price; in this case, I have not
yet found a general mechanism for the old (hard-coded) modal bindings,
which behaved differently depending on the autopilot state (i.e. left
rudder or move AP heading left); with my patches, this functionality
disappears, but you can still adjust the autopilot using the panel or
the GUI input dialogs.

--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -75,6 +75,7 @@ fgfs_LDADD = \
 	$(top_builddir)/src/Objects/libObjects.a \
 	$(top_builddir)/src/Time/libTime.a \
 	$(WEATHER_LIBS) \
+	$(top_builddir)/src/Input/libInput.a \
 	$(top_builddir)/src/Joystick/libJoystick.a \
 	-lsgroute -lsgsky -lsgephem -lsgtiming -lsgio -lsgscreen \
 	-lsgmath -lsgbucket -lsgdebug -lsgmagvar -lsgmisc -lsgxml \
