Files moved from ../Joystick to here.

--- a/src/Input/Makefile.am
+++ b/src/Input/Makefile.am
@@ -2,4 +2,14 @@ noinst_LIBRARIES = libInput.a
 
 libInput_a_SOURCES = input.cxx input.hxx
 
+bin_PROGRAMS = js_demo fgjs
+
+js_demo_SOURCES = js_demo.cxx
+
+js_demo_LDADD = $(audio_LIBS)
+
+fgjs_SOURCES = fgjs.cxx jsinput.cxx jssuper.cxx
+
+fgjs_LDADD =
+
 INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
