--- a/src/Input/Makefile.am
+++ b/src/Input/Makefile.am
@@ -8,7 +8,7 @@ js_demo_SOURCES = js_demo.cxx
 
 js_demo_LDADD = $(audio_LIBS)
 
-fgjs_SOURCES = fgjs.cxx jsinput.cxx jssuper.cxx
+fgjs_SOURCES = fgjs.cxx jsinput.cxx jsinput.h jssuper.cxx jssuper.h
 
 fgjs_LDADD = $(audio_LIBS)
 
