--- a/src/Input/Makefile.am
+++ b/src/Input/Makefile.am
@@ -8,8 +8,8 @@ js_demo_SOURCES = js_demo.cxx
 
 js_demo_LDADD = $(audio_LIBS)
 
-fgjs_SOURCES = fgjs.cxx jsinput.cxx jsinput.h jssuper.cxx jssuper.h
+# fgjs_SOURCES = fgjs.cxx jsinput.cxx jsinput.h jssuper.cxx jssuper.h
 
-fgjs_LDADD = $(audio_LIBS)
+# fgjs_LDADD = $(audio_LIBS)
 
 INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
