Removed NetworkOLK/features.[ch]xx

--- a/src/NetworkOLK/Makefile.am
+++ b/src/NetworkOLK/Makefile.am
@@ -1,7 +1,6 @@
 noinst_LIBRARIES = libNetworkOLK.a
 
 libNetworkOLK_a_SOURCES = \
-	net_send.cxx net_hud.cxx network.cxx network.h fgd.h \
-	features.cxx features.hxx
+	net_send.cxx net_hud.cxx network.cxx network.h fgd.h
 
 INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
