--- a/src/Objects/Makefile.am
+++ b/src/Objects/Makefile.am
@@ -1,6 +1,7 @@
 noinst_LIBRARIES = libObjects.a
 
 libObjects_a_SOURCES = \
+	apt_signs.cxx apt_signs.hxx \
 	newmat.cxx newmat.hxx \
 	matlib.cxx matlib.hxx \
 	obj.cxx obj.hxx \
