Updated config file from Bernie.

--- a/am2dsp.cfg
+++ b/am2dsp.cfg
@@ -1,13 +1,67 @@
-exclude_dir=NetworkOLK
-exclude_dir=Weather
+#type = ConsoleApplication
 
-#exclude_file = src/GUI/net_dlg.cxx
-#exclude_file = src/GUI/net_dlg.hxx
+exclude_dir = NetworkOLK
+exclude_dir = Weather
 
+exclude_file = src\GUI\net_dlg.cxx
+exclude_file = src\GUI\net_dlg.hxx
+#exclude_file = src\FDM\JSBSim\FGControls.cpp
+#exclude_file = src\FDM\JSBSim\FGControls.h
+
+include_path = ..
 include_path = .\src
 include_path = .\src\include
-include_path = ..\simgear
-include_path = ..\simgear\simgear\metakit\include
+include_path = ..\SimGear
+include_path = ..\SimGear\simgear\metakit\include
+#include_path = \usr\include
+
+define = FGFS
+define = HAVE_CONFIG_H
+#define = GLUT_API_VERSION=4
 
 lib_path = ..\plib
-lib_path = ..\simgear
+add_lib = ssg
+add_lib = sg
+add_lib = pui
+add_lib = fnt
+add_lib = js
+add_lib = ul
+
+#lib_path = ..\SimGear\%CFG%
+lib_path = ..\SimGear
+add_lib  = SimGear
+
+lib_path = ..\SimGear\simgear\metakit\builds
+add_lib = mk4vc60s_d
+
+#add_project = ..\SimGear\SimGear.dsp
+
+# Rule to create config.h
+add_source_file = \
+# Begin Source File\
+\
+SOURCE = .\src\Include\config.h-msvc6\
+\
+!IF  "$(CFG)" == "FlightGear - Win32 Release"\
+\
+# Begin Custom Build - Creating config.h\
+InputPath=.\src\Include\config.h-msvc6\
+\
+".\src\Include\config.h": $(SOURCE) "$(INTDIR)" "$(OUTDIR)"\
+	copy .\src\Include\config.h-msvc6 .\src\Include\config.h\
+\
+# End Custom Build\
+\
+!ELSEIF  "$(CFG)" == "FlightGear - Win32 Debug"\
+\
+# Begin Custom Build - Creating config.h\
+InputPath=.\src\Include\config.h-msvc6\
+\
+".\src\Include\config.h": $(SOURCE) "$(INTDIR)" "$(OUTDIR)"\
+	copy .\src\Include\config.h-msvc6 .\src\Include\config.h\
+\
+# End Custom Build\
+\
+!ENDIF\
+\
+# End Source File
