Various tweaks for mingwin32.

--- a/src/GUI/Makefile.am
+++ b/src/GUI/Makefile.am
@@ -1,11 +1,17 @@
 noinst_LIBRARIES = libGUI.a
 
+if ENABLE_NETWORK_OLK
+NETWORK_SRCS = net_dlg.cxx net_dlg.hxx 
+else
+NETWORK_SRCS = 
+endif
+
 libGUI_a_SOURCES = \
 	apt_dlg.cxx apt_dlg.hxx \
 	gui.cxx gui.h \
 	gui_local.cxx gui_local.hxx \
 	mouse.cxx \
-	net_dlg.cxx net_dlg.hxx \
+	$(NETWORK_SRCS) \
 	sgVec3Slider.cxx sgVec3Slider.hxx \
 	trackball.c trackball.h
 
