Added httpd protocol so you can interface to a running copy of FlightGear via a web browser, see README.IO for more details.

--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -79,7 +79,7 @@ fgfs_LDADD = \
 	-lsgmath -lsgbucket -lsgdebug -lsgmagvar -lsgmisc -lsgxml \
 	$(SERIAL_LIBS) \
 	$(THREAD_LIBS) \
-	-lplibpu -lplibfnt -lplibssg -lplibsg \
+	-lplibpu -lplibfnt -lplibnet -lplibssg -lplibsg \
 	-lmk4 -lz \
 	$(opengl_LIBS) \
 	$(audio_LIBS)
