Changes to better support arbitrary external flight models.

--- a/src/Network/Makefile.am
+++ b/src/Network/Makefile.am
@@ -8,10 +8,11 @@ libNetwork_a_SOURCES = \
 	joyclient.cxx joyclient.hxx \
 	native.cxx native.hxx \
 	native_ctrls.cxx native_ctrls.hxx \
+	native_fdm.cxx native_fdm.hxx \
 	nmea.cxx nmea.hxx \
 	props.cxx props.hxx \
 	pve.cxx pve.hxx \
-	raw_ctrls.hxx \
+	raw_ctrls.hxx raw_fdm.hxx \
 	ray.cxx ray.hxx \
 	rul.cxx rul.hxx
 
