--- a/src/FDM/UIUCModel/Makefile.am
+++ b/src/FDM/UIUCModel/Makefile.am
@@ -20,7 +20,8 @@ libUIUCModel_a_SOURCES = \
 			uiuc_controlInput.cpp uiuc_controlInput.h \
                         uiuc_convert.cpp uiuc_convert.h \
                         uiuc_engine.cpp uiuc_engine.h \
-                        uiuc_gear.cpp uiuc_gear.h \
+			uiuc_fog.cpp uiuc_fog.h \
+			uiuc_gear.cpp uiuc_gear.h\
                         uiuc_ice.cpp uiuc_ice.h \
                         uiuc_initializemaps.cpp uiuc_initializemaps.h \
 			uiuc_map_CD.cpp uiuc_map_CD.h \
@@ -31,6 +32,7 @@ libUIUCModel_a_SOURCES = \
 			uiuc_map_Croll.cpp uiuc_map_Croll.h \
 			uiuc_map_controlSurface.cpp uiuc_map_controlSurface.h \
 			uiuc_map_engine.cpp uiuc_map_engine.h \
+			uiuc_map_fog.cpp uiuc_map_fog.h \
 			uiuc_map_geometry.cpp uiuc_map_geometry.h \
 			uiuc_map_ice.cpp uiuc_map_ice.h \
                         uiuc_map_gear.cpp uiuc_map_gear.h \
