--- a/src/Cockpit/Makefile.am
+++ b/src/Cockpit/Makefile.am
@@ -3,7 +3,7 @@ noinst_LIBRARIES = libCockpit.a
 libCockpit_a_SOURCES = \
 	cockpit.cxx cockpit.hxx \
 	hud.cxx hud.hxx hud_opts.hxx \
-	hud_card.cxx hud_dnst.cxx hud_guag.cxx hud_inst.cxx \
+	hud_card.cxx hud_dnst.cxx hud_gaug.cxx hud_inst.cxx \
 	hud_labl.cxx hud_ladr.cxx \
 	hud_lat.cxx hud_lon.cxx \
 	hud_scal.cxx hud_tbi.cxx \
