Enclosed is the latest engine model update that supercedes the one I sent yesterday.  I have re-zipped all four files so you can neglect the last lot but only io360.cxx has changed if you've already committed.  It's untested since I can't start the engine until John has committed his update with separate properties.  Should work fine though.

--- a/src/FDM/Makefile.am
+++ b/src/FDM/Makefile.am
@@ -13,11 +13,7 @@ libFlight_a_SOURCES = \
 	LaRCsimIC.cxx LaRCsimIC.hxx \
 	MagicCarpet.cxx MagicCarpet.hxx
 
-bin_PROGRAMS = engine pstest
-
-engine_SOURCES = engine.cxx
-
-engine_LDADD = libFlight.a
+bin_PROGRAMS = pstest
 
 pstest_SOURCES = ps-10520c.cxx
 
