--- a/src/Sound/Makefile.am
+++ b/src/Sound/Makefile.am
@@ -2,6 +2,7 @@ noinst_LIBRARIES = libSound.a
 
 libSound_a_SOURCES = \
 	beacon.cxx beacon.hxx \
+	fg_fx.cxx fg_fx.hxx \
 	morse.cxx morse.hxx \
 	soundmgr.cxx soundmgr.hxx
 
