Add the "null" flight model which is a better name for what the "external" flightmodel used to be called. Fixed wind (it was 180 degrees off).

--- a/src/FDM/Makefile.am
+++ b/src/FDM/Makefile.am
@@ -11,7 +11,8 @@ libFlight_a_SOURCES = \
 	JSBSim.cxx JSBSim.hxx \
 	LaRCsim.cxx LaRCsim.hxx \
 	LaRCsimIC.cxx LaRCsimIC.hxx \
-	MagicCarpet.cxx MagicCarpet.hxx
+	MagicCarpet.cxx MagicCarpet.hxx \
+	NullFDM.cxx NullFDM.hxx
 
 bin_PROGRAMS = pstest
 
