Added Network/opengc.cxx Network/opengc.hxx Network/opengc_data.hxx This is John Wojnaroski's initial implimentation of an interface to the OpenGC glass cockpit displays.

--- a/src/Network/Makefile.am
+++ b/src/Network/Makefile.am
@@ -10,6 +10,7 @@ libNetwork_a_SOURCES = \
 	native_ctrls.cxx native_ctrls.hxx \
 	native_fdm.cxx native_fdm.hxx \
 	nmea.cxx nmea.hxx \
+        opengc.cxx opengc.hxx opengc_data.hxx \
 	props.cxx props.hxx \
 	pve.cxx pve.hxx \
 	raw_ctrls.hxx raw_fdm.hxx \
