Syncing with latest JSBSim code with retractable landing gear support.

--- a/src/FDM/JSBSim/filtersjb/Makefile.am
+++ b/src/FDM/JSBSim/filtersjb/Makefile.am
@@ -6,9 +6,9 @@ libfiltersjb_a_SOURCES = \
 	FGDeadBand.cpp FGDeadBand.h \
 	FGFCSComponent.cpp FGFCSComponent.h \
 	FGFilter.cpp FGFilter.h \
-	FGFlaps.cpp FGFlaps.h \
 	FGGain.cpp FGGain.h \
 	FGGradient.cpp FGGradient.h \
+	FGKinemat.cpp FGKinemat.h \
 	FGSummer.cpp FGSummer.h \
 	FGSwitch.cpp FGSwitch.h
 
