--- a/src/Navaids/Makefile.am
+++ b/src/Navaids/Makefile.am
@@ -14,4 +14,8 @@ testnavs_LDADD = \
 	-lsgtiming -lsgmath -lsgmisc -lsgdebug -lsgmagvar -lsgxml \
 	-lz
 
+if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
+else
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
+endif
