--- a/src/Time/Makefile.am
+++ b/src/Time/Makefile.am
@@ -12,4 +12,8 @@ libTime_a_SOURCES = \
 	# lowleveltime.cxx lowleveltime.h \
 	# timezone.cxx timezone.h
 
+if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
+else
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
+endif
