--- a/src/Weather/Makefile.am
+++ b/src/Weather/Makefile.am
@@ -6,4 +6,8 @@ noinst_LIBRARIES = libWeather.a
 
 libWeather_a_SOURCES = weather.cxx weather.hxx
 
+if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
+else
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
+endif
