--- a/src/WeatherCM/Makefile.am
+++ b/src/WeatherCM/Makefile.am
@@ -18,4 +18,8 @@ libWeatherCM_a_SOURCES = \
 	FGWeatherVectorWrap.h \
 	FGWindItem.cpp FGWindItem.h
 
+if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
+else
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
+endif
