--- a/src/Aircraft/Makefile.am
+++ b/src/Aircraft/Makefile.am
@@ -2,4 +2,8 @@ noinst_LIBRARIES = libAircraft.a
 
 libAircraft_a_SOURCES = aircraft.cxx aircraft.hxx
 
+if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
+else
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
+endif
