--- a/src/Controls/Makefile.am
+++ b/src/Controls/Makefile.am
@@ -2,4 +2,8 @@ noinst_LIBRARIES = libControls.a
 
 libControls_a_SOURCES = controls.cxx controls.hxx
 
+if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
+else
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
+endif
