--- a/src/FDM/Balloon/Makefile.am
+++ b/src/FDM/Balloon/Makefile.am
@@ -2,4 +2,8 @@ noinst_LIBRARIES = libBalloon.a
 
 libBalloon_a_SOURCES = BalloonSim.cpp BalloonSim.h
 
+if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
+else
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
+endif
