--- a/src/FDM/JSBSim/filtersjb/Makefile.am
+++ b/src/FDM/JSBSim/filtersjb/Makefile.am
@@ -12,6 +12,11 @@ libfiltersjb_a_SOURCES = \
 	FGSummer.cpp FGSummer.h \
 	FGSwitch.cpp FGSwitch.h
 
-INCLUDES += -I$(top_srcdir)/src
-
+if OLD_AUTOMAKE
+INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
 DEFS += -DFGFS
+else
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
+AM_CXXFLAGS = -DFGFS
+endif
+
