--- a/src/Input/Makefile.am
+++ b/src/Input/Makefile.am
@@ -12,4 +12,8 @@ fgjs_SOURCES = fgjs.cxx jsinput.cxx jsinput.h jssuper.cxx jssuper.h
 
 fgjs_LDADD = $(audio_LIBS)
 
+if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
+else
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
+endif
