--- a/src/Sound/Makefile.am
+++ b/src/Sound/Makefile.am
@@ -6,4 +6,8 @@ libSound_a_SOURCES = \
 	morse.cxx morse.hxx \
 	soundmgr.cxx soundmgr.hxx
 
+if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
+else
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
+endif
