--- a/man/gl-info.1.in
+++ b/man/gl-info.1.in
@@ -16,20 +16,19 @@
 .\" Or try here: http://www.fsf.org/copyleft/gpl.html
 .\"
 .Id $Id$
-.TH FGJS 1 "January 2002" "@VERSION@" "@PACKAGE@"
+.TH GL-INFO 1 "January 2002" "@VERSION@" "@PACKAGE@"
 .SH NAME
-fgjs \- FlightGear Joystick Utility
+gl-info \- OpenGL test program for FlightGear
 .SH SYNOPSIS
-.B fgjs
+.B gl-info
 .SH DESCRIPTION
-.B fgjs
-is a joystick utility for the FlightGear Flight Simulator.  It allows
-you to generate an appropriate configuration file for your joystick.
+.B gl-info
+is an OpenGL test program used to verify a valid OpenGL environment.
 .SH BUGS
 Send bug reports to <flightgear-devel@flightgear.org>.
 .SH SEE ALSO
 fgfs(1)
 .SH AUTHORS
-Tony Peden, et al.  See
+Curt L. Olson, et al.  See
 .I Thanks
 file for a list of contributors.
