--- a/src/Network/Makefile.am
+++ b/src/Network/Makefile.am
@@ -8,6 +8,7 @@ endif
 
 libNetwork_a_SOURCES = \
 	protocol.cxx protocol.hxx \
+	atc610x.cxx atc610x.hxx \
 	atlas.cxx atlas.hxx \
 	garmin.cxx garmin.hxx \
         httpd.cxx httpd.hxx \
