--- a/am2dsp.cfg
+++ b/am2dsp.cfg
@@ -24,8 +24,10 @@ add_lib = ssg
 add_lib = sg
 add_lib = pui
 add_lib = fnt
-add_lib = js
+add_lib = sl
 add_lib = ul
+add_lib = ssgaux
+add_lib = net
 
 #lib_path = ..\SimGear\%CFG%
 lib_path = ..\SimGear
