Major sound-effect architectural reworking from Eric Hofman, allowing individual aircraft to have different sounds (and cleaning up my code a fair bit).  The most important user-visible change is the renaming of the /sim/sound property to /sim/sound/audible.

--- a/src/Sound/Makefile.am
+++ b/src/Sound/Makefile.am
@@ -2,6 +2,7 @@ noinst_LIBRARIES = libSound.a
 
 libSound_a_SOURCES = \
 	beacon.cxx beacon.hxx \
+	fg_sound.cxx fg_sound.hxx \
 	fg_fx.cxx fg_fx.hxx \
 	morse.cxx morse.hxx \
 	soundmgr.cxx soundmgr.hxx
