Attached is a reasonably large patch to add a proper ATC subsystem to Flightgear.  No more functionality is implemented than at present (apart from an ATIS bug-fix - station wouldn't change if the radio was switched directly from one station to another) but it is much neater than the current hack and should be easily extendable.
Some cruft is still probably left over in radiostack.[ch]xx such as
the bindings to the comm frequencies but I'll leave removing those
until I'm sure they're not needed there.

--- a/src/ATC/Makefile.am
+++ b/src/ATC/Makefile.am
@@ -1,8 +1,11 @@
 noinst_LIBRARIES = libATC.a
 
 libATC_a_SOURCES = \
-	atis.cxx atis.hxx atislist.hxx atislist.cxx \
-	ATCdisplay.hxx ATCdisplay.cxx
+	ATC.hxx ATC.cxx \
+	ATCdisplay.hxx ATCdisplay.cxx \
+	ATCmgr.hxx ATCmgr.cxx \
+	atis.cxx atis.hxx \
+	atislist.hxx atislist.cxx
 
 if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
