--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,12 +1,15 @@
 bin_PROGRAMS = est-epsilon gl-info
 
-noinst_PROGRAMS = test-gethostname test-mktime test-text test-up
+noinst_PROGRAMS = test-gethostname test-mktime test-text test-up test-env-map
 
 est_epsilon_SOURCES = est-epsilon.c
 est_epsilon_LDADD = $(base_LIBS)
 
 gl_info_SOURCES = gl-info.c
 gl_info_LDADD = $(opengl_LIBS)
+
+test_env_map_SOURCES = test-env-map.cxx
+test_env_map_LDADD = $(opengl_LIBS)
 
 test_gethostname_SOURCES = test-gethostname.cxx
 test_gethostname_LDADD = $(base_LIBS)
