Initial revision.  Things are just beginning to be stubbed in now.

--- a/src/Objects/Makefile.am
+++ b/src/Objects/Makefile.am
@@ -2,6 +2,7 @@ noinst_LIBRARIES = libObjects.a
 
 libObjects_a_SOURCES = \
 	apt_signs.cxx apt_signs.hxx \
+	dir_lights.cxx dir_lights.hxx \
 	newmat.cxx newmat.hxx \
 	matlib.cxx matlib.hxx \
 	obj.cxx obj.hxx \
