--- a/src/FDM/JSBSim/Makefile.am
+++ b/src/FDM/JSBSim/Makefile.am
@@ -48,6 +48,7 @@ libJSBSim_a_SOURCES = \
 	FGEngine.cpp FGEngine.h \
 	FGTank.cpp FGTank.h \
 	FGfdmSocket.cpp FGfdmSocket.h \
+  FGPropertyManager.h \
 	JSBSim.cxx JSBSim.hxx
 
 
