I have attached revisions to the UIUC code.  The revisions include the ability to run a nonlinear model with flaps.  The files ls_model.c and uiuc_aero.c were changed since we had some functions with the same name.  The name changes doesn't affect the code, it just makes it a little easier to read.  There are changes in LaRCsim.cxx so UIUC models have engine sound.  Could you send me an email when you receive this and/or when the changes make it to the CVS?  Thanks.
Also I noticed you have some outdated files that are no longer used in
the UIUCModel directory.  They are uiuc_initializemaps1.cpp,
uiuc_initializemaps2.cpp, uiuc_initializemaps3.cpp, and
uiuc_initializemaps4.cpp

Rob

--- a/src/FDM/UIUCModel/Makefile.am
+++ b/src/FDM/UIUCModel/Makefile.am
@@ -7,6 +7,7 @@ libUIUCModel_a_SOURCES = \
                         uiuc_1Dinterpolation.cpp uiuc_1Dinterpolation.h \
                         uiuc_2DdataFileReader.cpp uiuc_2DdataFileReader.h \
                         uiuc_2Dinterpolation.cpp uiuc_2Dinterpolation.h \
+			uiuc_3Dinterpolation.cpp uiuc_3Dinterpolation.h \
                         uiuc_aerodeflections.cpp uiuc_aerodeflections.h \
 			uiuc_aircraftdir.h uiuc_aircraft.h \
                         uiuc_betaprobe.cpp uiuc_betaprobe.h \
