Here is the 'boostified' event manager plus relevant changes to radiostack.cxx, fg_init.cxx and main.cxx.  If these changes are accepted then you can remove Time/event.[ch]xx and Include/fg_callback.hxx from the repository.

--- a/src/Time/Makefile.am
+++ b/src/Time/Makefile.am
@@ -1,7 +1,7 @@
 noinst_LIBRARIES = libTime.a
 
 libTime_a_SOURCES = \
-	event.cxx event.hxx \
+	FGEventMgr.cxx FGEventMgr.hxx \
 	fg_timer.cxx fg_timer.hxx \
 	light.cxx light.hxx \
 	moonpos.cxx moonpos.hxx \
