Patch from Martin Dressler:
This patch moves built-in Class (for now only mag-ribbon) into special
directory as you have written it in TODO: in comments of this class in
panel_io.cxx.  IMHO it is good idea.  I want to play with built-in
classes and OpenGC and this will be useful.

--- a/src/Cockpit/Makefile.am
+++ b/src/Cockpit/Makefile.am
@@ -10,10 +10,13 @@ libCockpit_a_SOURCES = \
 	panel.cxx panel.hxx \
         panel_io.cxx panel_io.hxx \
 	radiostack.cxx radiostack.hxx \
-	steam.cxx steam.hxx
+	steam.cxx steam.hxx \
+	libBuilt_in.a
 
 if OLD_AUTOMAKE
 INCLUDES += -I$(top_srcdir) -I$(top_srcdir)/src
 else
 INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
 endif
+
+SUBDIRS = built_in
