Let's try it again, with the correct file name this time.

--- a/src/Include/Makefile.am
+++ b/src/Include/Makefile.am
@@ -3,6 +3,7 @@ EXTRA_DIST = \
 	config.h.in \
 	config.h-msvc6 \
 	cmdargs.h \
+	fg_callback.hxx \
 	fg_typedefs.h \
 	fg_stl_config.h \
 	general.hxx
