Updated am2dsp.cfg from Bernie.

--- a/am2dsp.cfg
+++ b/am2dsp.cfg
@@ -1,55 +1,57 @@
-#type = ConsoleApplication
+type = ConsoleApplication,Multithreaded,Debug
 
 exclude_dir = NetworkOLK
 exclude_dir = Weather
 
 exclude_file = src\GUI\net_dlg.cxx
 exclude_file = src\GUI\net_dlg.hxx
-#exclude_file = src\FDM\JSBSim\FGControls.cpp
-#exclude_file = src\FDM\JSBSim\FGControls.h
 
 include_path = ..
 include_path = .\src
 include_path = .\src\include
 include_path = ..\SimGear
-include_path = ..\SimGear\simgear\metakit\include
-#include_path = \usr\include
+include_path = ..\SimGear\metakit-2.4.3\include
+include_path = ..\SimGear\zlib-1.1.4
 
-define = FGFS
 define = HAVE_CONFIG_H
-#define = GLUT_API_VERSION=4
+define = FGFS
+#define = FG_NDEBUG
+#define = FG_NETWORK_OLK
+#define = FG_JPEG_SERVER
+define = FG_NEW_ENVIRONMENT
+#define = FG_NEW_MOUSE
+define = ENABLE_AUDIO_SUPPORT
+define = ENABLE_PLIB_JOYSTICK
 
-lib_path = ..\plib
-add_lib = ssg
-add_lib = sg
-add_lib = pui
-add_lib = fnt
-add_lib = sl
-add_lib = ul
-add_lib = ssgaux
-add_lib = net
+#add_lib = glut32.lib
 
-#lib_path = ..\SimGear\%CFG%
-lib_path = ..\SimGear
-add_lib  = SimGear
+#lib_path = ..\plib
+#add_lib = ssg
+#add_lib = sg
+#add_lib = pui
+#add_lib = fnt
+#add_lib = sl
+#add_lib = ul
+#add_lib = ssgaux
+#add_lib = net
 
-lib_path = ..\SimGear\simgear\metakit\builds
-add_lib = mk4vc60s_d
+#lib_path = ..\SimGear
+#add_lib  = SimGear
+
+#lib_path = ..\SimGear\metakit\builds
+#add_lib = mk4vc60s_std_d
 
 #add_project = ..\SimGear\SimGear.dsp
 
 # Rule to create config.h
-add_source_file = \
-# Begin Source File\
-\
-SOURCE = .\src\Include\config.h-msvc6\
+add_source_file = SOURCE = .\src\Include\config.h-msvc6\
 \
 !IF  "$(CFG)" == "FlightGear - Win32 Release"\
 \
 # Begin Custom Build - Creating config.h\
 InputPath=.\src\Include\config.h-msvc6\
 \
-".\src\Include\config.h": $(SOURCE) "$(INTDIR)" "$(OUTDIR)"\
+".\src\Include\config.h" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"\
 	copy .\src\Include\config.h-msvc6 .\src\Include\config.h\
 \
 # End Custom Build\
@@ -59,11 +61,10 @@ InputPath=.\src\Include\config.h-msvc6\
 # Begin Custom Build - Creating config.h\
 InputPath=.\src\Include\config.h-msvc6\
 \
-".\src\Include\config.h": $(SOURCE) "$(INTDIR)" "$(OUTDIR)"\
+".\src\Include\config.h" : $(SOURCE) "$(INTDIR)" "$(OUTDIR)"\
 	copy .\src\Include\config.h-msvc6 .\src\Include\config.h\
 \
 # End Custom Build\
 \
 !ENDIF\
-\
-# End Source File
+
